k8s/auth-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
  labels:
    app: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      securityContext:
        seccompProfile:
          type: Unconfined
      containers:
      - name: auth-server
        image: docker.io/blindmuaddib/auth-server:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 45769
        resources:
          limits:
            memory: "10Gi"
            cpu: "500m"
          requests:
            memory: "1Gi"
            cpu: "100m"
