k8s/beethoven-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beethoven-deployment
  labels:
    app: beethoven
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beethoven
  template:
    metadata:
      labels:
        app: beethoven
    spec:
      containers:
        - name: nginx
          image: docker.io/blindmuaddib/beethoven:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data/audio
              subPath: audio
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
