k8s/demucs-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demucs-deployment
  labels:
    app: demucs-wrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demucs-wrapper
  template:
    metadata:
      labels:
        app: demucs-wrapper
    spec:
      containers:
        - name: demucs-container
          image: docker.io/blindmuaddib/separate-endpoint:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 22227
          resources:
            requests:
              cpu: "2"
              memory: "24Gi"
            limits:
              cpu: "12"
              memory: "40Gi"
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data/audio
              subPath: audio
            - name: shared-data
              mountPath: /shared-data/separator_output
              subPath: separator_output
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
