k8s/harmonic-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harmonic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harmonic-client
  template:
    metadata:
      labels:
        app: harmonic-client
    spec:
      containers:
        - name: harmonic-client-container
          image: docker.io/blindmuaddib/harmonic-endpoint:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 20006
          resources:
            requests:
              cpu: "4"
              memory: "16Gi"
            limits:
              cpu: "8"
              memory: "32Gi"
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data/results
              subPath: results
            - name: shared-data
              mountPath: /shared-data/audio
              subPath: audio
            - name: shared-data
              mountPath: /shared-data/separator_output
              subPath: separator_output
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
