k8s/main-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translator
  template:
    metadata:
      labels:
        app: translator
    spec:
      containers:
        - name: music-translator-container
          image: docker.io/blindmuaddib/music-translator:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 20005
          resources:
            requests:
              cpu: "200m"
              memory: "5Gi"
            limits:
              cpu: "1.5"
              memory: "10Gi"
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data/audio
              subPath: audio
            - name: shared-data
              mountPath: /shared-data/lyrics
              subPath: lyrics
            - name: shared-data
              mountPath: /shared-data/separator_output
              subPath: separator_output
            - name: shared-data
              mountPath: /shared-data/corpus
              subPath: corpus
            - name: shared-data
              mountPath: /shared-data/aligned
              subPath: aligned
            - name: shared-data
              mountPath: /shared-data/results
              subPath: results
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
