k8s/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:8.0-rc1-bookworm
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: "12Gi"
            cpu: "500m"
          requests:
            memory: "4Gi"
            cpu: "100m"
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 5
          periodSeconds: 10
