k8s/rms-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volume-analyzer
  template:
    metadata:
      labels:
        app: volume-analyzer
    spec:
      containers:
        - name: volume-analyzer-container
          image: docker.io/blindmuaddib/volume-endpoint:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 39574
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data/audio
              subPath: audio
            - name: shared-data
              mountPath: /shared-data/separator_output
              subPath: separator_output
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
