k8s/auth-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-server
  ports:
    - name: http
      protocol: TCP
      port: 8443
      targetPort: 45769
