k8s/beethoven-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beethoven-service
  labels:
    app: beethoven
spec:
  selector:
    app: beethoven
  ports:
    - name: http
      protocol: TCP
      port: 8443
      targetPort: 80
