k8s/demucs-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demucs-service
spec:
  selector:
    app: demucs-wrapper
  ports:
    - name: http
      protocol: TCP
      port: 22227
      targetPort: 22227
