k8s/drums-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drums-service
spec:
  selector:
    app: drums-client
  ports:
    - protocol: TCP
      port: 25941
      targetPort: 25941
