k8s/main-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: translator-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 20005
      targetPort: 20005
  selector:
    app: translator
