k8s/mfa-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mfa-service
spec:
  selector:
    app: mfa-wrapper
  ports:
    - name: http
      protocol: TCP
      port: 24725
      targetPort: 24725
