k8s/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
  - name: http
    protocol: TCP
    port: 6379
    targetPort: 6379
