k8s/rms-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rms-service
spec:
  type: ClusterIP
  selector:
    app: volume-analyzer
  ports:
    - protocol: TCP
      port: 39574
      targetPort: 39574
